# PyWABaileys

./: README.md  pyproject.toml
examples/: bot_basic.py
gateway/: package.json
gateway/src/: brain.ts  index.ts  types.ts
pywabaileys/: __init__.py  client.py  models.py  protocol.py
