[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywabaileys"
version = "0.1.0"
description = "Baileys-like WhatsApp bot library in Python using a TS Baileys gateway"
requires-python = ">=3.10"
dependencies = ["fastapi", "uvicorn", "pydantic"]

[tool.setuptools]
packages = ["pywabaileys"]
